# word_count

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  main.c
core/: CMakeLists.txt
core/array/include/: word_manage_p.h
core/array/src/: add_word.c  dump_word.c  finalize.c  initialize.c
core/get_word/include/: get_word.h
core/get_word/src/: get_word.c
core/include/: word_manage.h
core/list/include/: word_manage_P.h  word_manage_p.h
core/list/src/: add_word.c  dump_word.c  finalize.c  initialize.c
vs2012/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  word_count.vcxproj  word_count.vcxproj.filters  word_count_project.sdf  word_count_project.sln
vs2012/core/: cmake_install.cmake  get_word.vcxproj  get_word.vcxproj.filters  manage.vcxproj  manage.vcxproj.filters
vs2012/core/get_word.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.write.1.tlog  get_word.lastbuildstate  lib.command.1.tlog
vs2012/core/manage.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  lib.command.1.tlog
vs2012/word_count.dir/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
vs2012/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
(+3 files in other folders)
