SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(./include ./array/include ./get_word/include)
AUX_SOURCE_DIRECTORY(./array/src ARRAY_LIB_CPP)
AUX_SOURCE_DIRECTORY(./get_word/src GETWORD_LIB_CPP)
ADD_LIBRARY(manage SHARED ${ARRAY_LIB_CPP})
ADD_LIBRARY(get_word SHARED ${GETWORD_LIB_CPP})


